--- a/projects/TechCareerStokTakip/WebAPI/appsettings.json
+++ b/projects/TechCareerStokTakip/WebAPI/appsettings.json
@@ -1,4 +1,9 @@
 {
+
+  "ConnectionStrings": {
+
+    "SqlConnection": "server=(localdb)\\MSSQLLocalDB; Database = TechCareer_Stok_Takip_Db;Trusted_Connection=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
