--- a/projects/TechCareerStokTakip/Service/Service.csproj
+++ b/projects/TechCareerStokTakip/Service/Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\corePackages\Core.CrossCutingConcerns\Core.CrossCutingConcerns.csproj" />
     <ProjectReference Include="..\..\..\corePackages\Core.Shared\Core.Shared.csproj" />
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
